step 2: used the "redux" instead of "flux"

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>React Flux Todo</title>
+  <title>React Redux Todo</title>
 </head>
 <body>
-  <div id="react-flux-todo"></div>
+  <div id="react-redux-todo"></div>
 </body>
 </html>
